[tool.poetry]
name = "main 14-1"
version = "0.1.0"
description = ""
authors = ["Nesterov-art <shadowwess@gmail.com>"]
readme = "README.md"
packages = [{include = "main 14"}]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
